# suidless-su

./: Readme.md  meson.build  meson_options.txt
data/: meson.build  su.openrc.in  su.sysvinit.in  suidless-su.pam
include/: auth.h  client.h  common.h  pty.h  server.h  spawn.h
src/: main.c  meson.build
src/client/: client.c  meson.build  su.c  sudo.c
src/server/: auth.c  main.c  meson.build  pam.c  pty.c  server.c  spawn.c
